[workspace]
members = [".", "derive"]

[workspace.package]
version = "0.2.0"
categories = ["concurrency", "rust-patterns"]
keywords = ["atomics", "concurrency", "lock-free", "threading", "no-std"]
authors = ["Chilli <chilli@thechilli.dev>"]
license = "MPL-2.0"
edition = "2021"
repository = "https://github.com/TheChilliPL/atomiq"
publish = ["crates-io"]

[package]
name = "atomiq"
description = "Convenient tool for atomics in Rust."
version.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = ["alloc", "derive"]
alloc = []
loom = ["dep:loom", "alloc"]
derive = ["dep:atomiq-derive"]

[dependencies]
cfg-if = "1.0.0"
loom = { version = "0.7.2", optional = true }
atomiq-derive = { path = "derive", version = "=0.2.0", optional = true }

[dev-dependencies]
log = "0.4.22"
env_logger = "0.11.6"
pretty_assertions = "1.4.1"
test-log = "0.2.16"