[package]
name = "atomiq-derive"
description = "Derive macros for atomiq."
version.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn = "2.0.93"

[dev-dependencies]
atomiq = { path = ".." }
trybuild = "1.0.101"